--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -91,6 +91,6 @@ form {
 }
 
 #login-register-footer {
-  margin-top: 140px;
-  margin-bottom: -120px;
+  margin-top: 15px;
+  // margin-bottom: -120px;
 }
